Issue #792: Bootstrap AcksUpdater; remove terminated subscribers from DData.
Signed-off-by: Yufei Cai <yufei.cai@bosch.io>